// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TokensPage /> Default should match snapshot 1`] = `
<main
  class="my-page my-mw-s"
>
  <h1
    class="my-page-header"
  >
    Tokens
  </h1>
  <table>
    <thead>
      <tr>
        <th>
          Name
        </th>
        <th>
          Price (Ether)
        </th>
        <th
          class="my-d-min-xs"
        >
          Address
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="my-clickabletablerow"
        tabindex="0"
      >
        <td>
          Token
        </td>
        <td>
          <span
            class="my-amount"
          >
            NaN
          </span>
          <ul
            class="my-tokenpricehistory my-hlist my-m-0"
          >
            <li>
              <span
                class="my-badge my-color-success "
              >
                <span
                  class="my-difference-prefix"
                >
                  H
                </span>
                <span
                  class="my-amount"
                >
                  +100%
                </span>
              </span>
            </li>
            <li>
              <span
                class="my-badge my-color-danger "
              >
                <span
                  class="my-difference-prefix"
                >
                  D
                </span>
                <span
                  class="my-amount"
                >
                  -50%
                </span>
              </span>
            </li>
            <li>
              <span
                class="my-badge my-color-danger "
              >
                <span
                  class="my-difference-prefix"
                >
                  W
                </span>
                <span
                  class="my-amount"
                >
                  -75%
                </span>
              </span>
            </li>
            <li>
              <span
                class="my-badge my-color-neutral "
              >
                <span
                  class="my-difference-prefix"
                >
                  M
                </span>
                <span
                  class="my-amount"
                >
                  +0%
                </span>
              </span>
            </li>
            <li>
              <span
                class="my-badge my-color-success "
              >
                <span
                  class="my-difference-prefix"
                >
                  Y
                </span>
                <span
                  class="my-amount"
                >
                  +300%
                </span>
              </span>
            </li>
          </ul>
        </td>
        <td
          class="my-d-min-xs my-text-center"
        >
          <span>
            <a
              class="my-link"
              href="https://etherscan.io/address/0x0000000000000000000000000000000000000111"
              tabindex="0"
              target="_blank"
            >
              <span
                class="my-address-hash"
              >
                0x0000...0111
              </span>
            </a>
          </span>
        </td>
      </tr>
      <tr
        class="my-clickabletablerow"
        tabindex="0"
      >
        <td>
          Token
        </td>
        <td>
          <span
            class="my-amount"
          >
            NaN
          </span>
          <ul
            class="my-tokenpricehistory my-hlist my-m-0"
          >
            <li>
              <span
                class="my-badge my-color-success "
              >
                <span
                  class="my-difference-prefix"
                >
                  H
                </span>
                <span
                  class="my-amount"
                >
                  +100%
                </span>
              </span>
            </li>
            <li>
              <span
                class="my-badge my-color-danger "
              >
                <span
                  class="my-difference-prefix"
                >
                  D
                </span>
                <span
                  class="my-amount"
                >
                  -50%
                </span>
              </span>
            </li>
            <li>
              <span
                class="my-badge my-color-danger "
              >
                <span
                  class="my-difference-prefix"
                >
                  W
                </span>
                <span
                  class="my-amount"
                >
                  -75%
                </span>
              </span>
            </li>
            <li>
              <span
                class="my-badge my-color-neutral "
              >
                <span
                  class="my-difference-prefix"
                >
                  M
                </span>
                <span
                  class="my-amount"
                >
                  +0%
                </span>
              </span>
            </li>
            <li>
              <span
                class="my-badge my-color-success "
              >
                <span
                  class="my-difference-prefix"
                >
                  Y
                </span>
                <span
                  class="my-amount"
                >
                  +300%
                </span>
              </span>
            </li>
          </ul>
        </td>
        <td
          class="my-d-min-xs my-text-center"
        >
          <span>
            <a
              class="my-link"
              href="https://etherscan.io/address/0x0000000000000000000000000000000000000222"
              tabindex="0"
              target="_blank"
            >
              <span
                class="my-address-hash"
              >
                0x0000...0222
              </span>
            </a>
          </span>
        </td>
      </tr>
      <tr
        class="my-clickabletablerow"
        tabindex="0"
      >
        <td>
          Token
        </td>
        <td>
          <span
            class="my-amount"
          >
            NaN
          </span>
          <ul
            class="my-tokenpricehistory my-hlist my-m-0"
          >
            <li>
              <span
                class="my-badge my-color-success "
              >
                <span
                  class="my-difference-prefix"
                >
                  H
                </span>
                <span
                  class="my-amount"
                >
                  +100%
                </span>
              </span>
            </li>
            <li>
              <span
                class="my-badge my-color-danger "
              >
                <span
                  class="my-difference-prefix"
                >
                  D
                </span>
                <span
                  class="my-amount"
                >
                  -50%
                </span>
              </span>
            </li>
            <li>
              <span
                class="my-badge my-color-danger "
              >
                <span
                  class="my-difference-prefix"
                >
                  W
                </span>
                <span
                  class="my-amount"
                >
                  -75%
                </span>
              </span>
            </li>
            <li>
              <span
                class="my-badge my-color-neutral "
              >
                <span
                  class="my-difference-prefix"
                >
                  M
                </span>
                <span
                  class="my-amount"
                >
                  +0%
                </span>
              </span>
            </li>
            <li>
              <span
                class="my-badge my-color-success "
              >
                <span
                  class="my-difference-prefix"
                >
                  Y
                </span>
                <span
                  class="my-amount"
                >
                  +300%
                </span>
              </span>
            </li>
          </ul>
        </td>
        <td
          class="my-d-min-xs my-text-center"
        >
          <span>
            <a
              class="my-link"
              href="https://etherscan.io/address/0x0000000000000000000000000000000000000333"
              tabindex="0"
              target="_blank"
            >
              <span
                class="my-address-hash"
              >
                0x0000...0333
              </span>
            </a>
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</main>
`;

exports[`<TokensPage /> Empty should match snapshot 1`] = `
<main
  class="my-page my-mw-s"
>
  <h1
    class="my-page-header"
  >
    Tokens
  </h1>
  <table>
    <thead>
      <tr>
        <th>
          Name
        </th>
        <th>
          Price (Ether)
        </th>
        <th
          class="my-d-min-xs"
        >
          Address
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          <div
            class="my-loader"
          >
            <div
              class="my-loader-dots"
            />
          </div>
        </td>
        <td>
          <div
            class="my-loader"
          >
            <div
              class="my-loader-dots"
            />
          </div>
        </td>
        <td
          class="my-d-min-xs"
        >
          <div
            class="my-loader"
          >
            <div
              class="my-loader-dots"
            />
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</main>
`;
